# atlassian-hs

./: atlassian-hs.cabal  stack.yaml
src/Atlassian/Bitbucket/Cloud/: API.hs  Client.hs  Types.hs  Util.hs
src/Atlassian/Bitbucket/Server/: API.hs  Client.hs  Types.hs  Util.hs
src/Atlassian/Internal/: JSON.hs  JSONx.hs
