name:                 atlassian-hs
version:              0.1.0.0
synopsis:             Initial project template from stack
description:          Please see README.md
homepage:             https://github.com/oswynb/atlassian-hs#readme
license:              BSD3
license-file:         LICENSE
author:               Oswyn Brent
maintainer:           oztastic703@gmail.com
copyright:            Copyright 2016 Oswyn Brent
category:             Web
build-type:           Simple
cabal-version:        >=1.10

library
  hs-source-dirs:     src
  exposed-modules:    Atlassian.Bitbucket.Cloud.API
                      Atlassian.Bitbucket.Cloud.Client
                      Atlassian.Bitbucket.Cloud.Types
                      Atlassian.Bitbucket.Cloud.Util
  other-modules:      Atlassian.Internal.JSON
  build-depends:      base >= 4.7 && < 5,
                      aeson,
                      aeson-casing,
                      http-client,
                      network-uri,
                      servant,
                      servant-client,
                      servant-server,
                      text,
                      time,
                      vector
  default-language:   Haskell2010
  default-extensions: DeriveGeneric,
                      GeneralizedNewtypeDeriving,
                      OverloadedStrings
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/oswynb/atlassian-hs
